# finance.esg

./: .gitignore  README.md  pyproject.toml
data/: ENVIRONMENTAL_SCORE.csv  README.md  SOCIAL_SCORE.csv  esg score.csv
data/clean/: clustering_esg_returns.csv  clustering_esg_returns_kmeans_dbscan.csv  clustering_esg_returns_variations.csv  clustering_niveaux.csv  env_score_clean.csv  env_score_variations.csv  esg_score_clean.csv  panel_complet.csv  panel_esg_returns.csv  silhouette_esg_returns.csv  silhouette_esg_returns_kmeans.csv  soc_score_variations.csv  synthese_metriques.csv
data/clean/notebook1/: esg_score_variations.csv  panel_complet.csv  soc_score_clean.csv
data/clean/notebook2/: clustering_variations.csv  scores_standardises.csv
data/clean/notebook3/: resultats_finaux.csv
data/clean/notebook4/: panel_esg_returns.csv
data/clean/notebook5/: clustering_esg_returns_kmeans_dbscan.csv  clustering_esg_returns_variations.csv  silhouette_esg_returns_kmeans.csv
notebooks/: 01_nettoyage_exploration.ipynb  02_clustering_kmeans_cah.ipynb  03_ameliorations_avancees.ipynb  04_generation_rendements_yahoo.ipynb  05_analyse_esg_rendements_clustering.ipynb  05_final (1).ipynb  05_final (2).ipynb  05_final.ipynb
streamlit_app/: app.py
streamlit_app/assets/: nb01_results.txt  nb02_results.txt  nb03_results.txt  nb04_results.txt  nb05_results.txt  nb06_results.txt
